--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,11 @@
   "projects": {
     "holamundo": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -24,7 +28,8 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "src/styles.css",
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
@@ -97,6 +102,7 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
             "scripts": []
